syntax = "proto3";

option go_package = "genprotos/auth_pb";

service AuthService {
    // 1 Done
    rpc Register(RegisterRequest) returns (RegisterResponse);
    // 2 
    rpc Login(LoginRequest) returns (LoginResponse);
    // 3 Done
    rpc GetProfile(GetProfileRequest) returns (GetProfileResponse);
    // 4 Done
    rpc UpdateProfile(UpdateProfileRequest) returns (UpdateProfileResponse);
    // 5 Done
    rpc ResetPassword(ResetPasswordRequest) returns (ResetPasswordResponse);
    // 6
    rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse);
    // 7
    rpc Logout(LogoutRequest) returns (LogoutResponse);
    // 8 Done
    rpc CreateKitchen(CreateKitchenRequest) returns (CreateKitchenResponse);
    // 9 Done
    rpc UpdateKitchen(UpdateKitchenRequest) returns (UpdateKitchenResponse);
    // 10 Done
    rpc GetKitchen(GetKitchenRequest) returns (GetKitchenResponse);
    // 11 Done
    rpc ListKitchens(ListKitchensRequest) returns (ListKitchensResponse);
    // 12 Done
    rpc SearchKitchens(SearchKitchensRequest) returns (SearchKitchensResponse);
}

message RegisterRequest {
  string username = 1;
  string email = 2;
  string password = 3;
  string full_name = 4;
  string user_type = 5;
}

message RegisterResponse {
  string user_id = 1;
  string username = 2;
  string email = 3;
  string full_name = 4;
  string user_type = 5;
  string created_at = 6;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string access_token = 1;
}

message GetProfileRequest {
    string user_id = 1;
}

message GetProfileResponse {
  string user_id = 1;
  string username = 2;
  string email = 3;
  string full_name = 4;
  string user_type = 5;
  string address = 6;
  string phone_number = 7;
  string created_at = 8;
  string updated_at = 9;
}

message UpdateProfileRequest {
  string user_id = 1;
  string full_name = 2;
  string address = 3;
  string phone_number = 4;
}

message UpdateProfileResponse {
  string user_id = 1;
  string username = 2;
  string email = 3;
  string full_name = 4;
  string user_type = 5;
  string address = 6;
  string phone_number = 7;
  string updated_at = 8;
}

message ResetPasswordRequest {
  string email = 1;
  string password = 2;
}

message ResetPasswordResponse {
  string message = 1;
}

message RefreshTokenRequest {
  string refresh_token = 1;
}

message RefreshTokenResponse {
  string access_token = 1;
  string refresh_token = 2;
  int32 expires_in = 3;
}

message LogoutRequest {}

message LogoutResponse {
  string message = 1;
}

message CreateKitchenRequest {
  string owner_id = 1;
  string name = 2;
  string description = 3;
  string cuisine_type = 4;
  string address = 5;
  string phone_number = 6;
}

message CreateKitchenResponse {
  string kitchen_id = 1;
  string owner_id = 2;
  string name = 3;
  string description = 4;
  string cuisine_type = 5;
  string address = 6;
  string phone_number = 7;
  float rating = 8;
  string created_at = 9;
}

message UpdateKitchenRequest {
  string kitchen_id = 1;
  string name = 2;
  string description = 3;
  string address = 4;
  string phone_number = 5;
}

message UpdateKitchenResponse {
  string kitchen_id = 1;
  string owner_id = 2;
  string name = 3;
  string description = 4;
  string cuisine_type = 5;
  string address = 6;
  string phone_number = 7;
  float rating = 8;
  string updated_at = 9;
}

message GetKitchenRequest {
  string kitchen_id = 1;
}

message GetKitchenResponse {
  string kitchen_id = 1;
  string owner_id = 2;
  string name = 3;
  string description = 4;
  string cuisine_type = 5;
  string address = 6;
  string phone_number = 7;
  float rating = 8;
  int32 total_orders = 9;
  string created_at = 10;
  string updated_at = 11;
}

message ListKitchensRequest {
  int32 page = 1;
  int32 limit = 2;
}

message KitchenListItem {
  string id = 1;
  string name = 2;
  string cuisine_type = 3;
  float rating = 4;
  int32 total_orders = 5;
}

message ListKitchensResponse {
  repeated KitchenListItem kitchens = 1;
  int32 total = 2;
  int32 page = 3;
  int32 limit = 4;
}

message SearchKitchensRequest {
  string name = 1;
  int32 page = 4;
  int32 limit = 5;
}

message SearchKitchensResponse {
  repeated KitchenListItem kitchens = 1;
  int32 total = 2;
  int32 page = 3;
  int32 limit = 4;
}
